@@ -1,7 +1,5 @@
 """Test listing a datasource's layers."""
 
-import logging
-import sys
 import os
 
 import pytest
@@ -77,7 +75,12 @@ def test_listing_pathobj(path_coutwildrnp_json):
 
 def test_listdir_path(path_coutwildrnp_zip):
     """List directories in a path"""
-    assert fiona.listdir(f'zip://{path_coutwildrnp_zip}') == ['coutwildrnp.shp', 'coutwildrnp.shx', 'coutwildrnp.dbf', 'coutwildrnp.prj']
+    assert sorted(fiona.listdir("zip://{}".format(path_coutwildrnp_zip))) == [
+        "coutwildrnp.dbf",
+        "coutwildrnp.prj",
+        "coutwildrnp.shp",
+        "coutwildrnp.shx",
+    ]
 
 
 def test_listdir_path_not_existing(data_dir):
@@ -94,12 +97,6 @@ def test_listdir_invalid_path():
 
 
 def test_listdir_file(path_coutwildrnp_zip):
-    """ Test list directories of a file"""
-    with pytest.raises(FionaValueError):
-        fiona.listdir(f'zip://{path_coutwildrnp_zip}/coutwildrnp.shp')
-
-
-def test_listdir_file(path_coutwildrnp_zip):
     """Test list directories of a file"""
     with pytest.raises(FionaValueError):
         fiona.listdir(f"zip://{path_coutwildrnp_zip}/coutwildrnp.shp")
@@ -109,9 +106,9 @@ def test_listdir_zipmemoryfile(bytes_coutwildrnp_zip):
     """Test list directories of a zipped memory file."""
     with ZipMemoryFile(bytes_coutwildrnp_zip) as memfile:
         print(memfile.name)
-        assert fiona.listdir(memfile.name) == [
-            "coutwildrnp.shp",
-            "coutwildrnp.shx",
+        assert sorted(fiona.listdir(memfile.name)) == [
             "coutwildrnp.dbf",
             "coutwildrnp.prj",
+            "coutwildrnp.shp",
+            "coutwildrnp.shx",
         ]
